Migrate to JDK 11